Fixed issues on highcontrast variant
Enact-DCO-1.0-Signed-off-by: Seungcheon Baek (sc.baek@lge.com)

--- a/Checkbox/Checkbox.module.less
+++ b/Checkbox/Checkbox.module.less
@@ -106,6 +106,9 @@
 	.checkbox-states(
 		{
 			// No custom rules for this state
+			.bg {
+				background-color: @sand-checkbox-standalone-bg-disabled-focus-bg-color;
+			}
 		};
 		.checkbox-colors(
 			@sand-checkbox-focus-disabled-selected-color,
