--- a/styles/skin.less
+++ b/styles/skin.less
@@ -14,7 +14,7 @@
 		@componentRules();
 
 		// High Contrast Variant
-		:global(.enact-a11y-high-contrast) &:global(.highContrast) {
+		:global(.enact-a11y-high-contrast):global(.highContrast)& {
 			@import "./colors-highcontrast.less";
 
 			@componentRules();
